...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_list_white_36dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/main_add_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_circle_white_36dp" />

...
